<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddEditActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/addEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_the_title"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:gravity="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/addEditDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_description"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:gravity="center"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/addEditSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveNote"/>


</LinearLayout>